# imessage-tracker

./: .gitignore  Cargo.toml  README.md
images/: README.md
imessage-database/: build.rs  (+1 more)
imessage-undeleter/: Cargo.toml
imessage-undeleter/src/: main.rs
imessage-undeleter/src/app/: error.rs  options.rs  runtime.rs  sanitizers.rs
imessage-undeleter/src/app/compatibility/: attachment_manager.rs  backup.rs
imessage-undeleter/src/app/compatibility/converters/: image.rs
imessage-undeleter/src/exporters/: exporter.rs  txt.rs
imessage-undeleter/src/exporters/resources/: style.css
sus/imessage-database/: Cargo.toml
sus/imessage-database/src/error/: plist.rs  typedstream.rs
sus/imessage-database/src/message_types/: app_store.rs  collaboration.rs  edited.rs  mod.rs  placemark.rs  url.rs
sus/imessage-database/src/message_types/digital_touch/: digital_touch_proto.rs  mod.rs  models.rs
sus/imessage-database/src/message_types/handwriting/: mod.rs
sus/imessage-database/src/tables/: handle.rs  table.rs
sus/imessage-database/src/tables/messages/: mod.rs  query_parts.rs
sus/imessage-database/src/tables/messages/tests/: date_tests.rs  edited_tests.rs  guid_tests.rs  query_tests.rs  variant.rs
sus/imessage-database/src/util/: dirs.rs  mod.rs  size.rs
sus/imessage-database/src/util/typedstream/: mod.rs
sus/imessage-database/src/util/typedstream/tests/: test_parser.rs  test_type.rs
sus/imessage-database/test_data/edited_message/: EditedWithFormatting.plist
sus/imessage-database/test_data/typedstream/: EditedWithFormatting  MultiAttachment  Transcription
(+38 files in other folders)
